[tool.poetry]
name = "ratelimit-fastapi"
version = "1.0.2"
description = "Ratelimit solution for FastAPI"
authors = ["kuyugama <mail.kuyugama@gmail.com>"]
readme = "README.md"

packages = [
    {include = "ratelimit"}
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI",
]

license = "GPL-3.0-only"


[tool.poetry.dependencies]
python = ">=3.9"
fastapi = "0.115.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
